force-app/main/default/objects/Communication__c/fields/ActivityTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityTime__c</fullName>
    <label>ActivityTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>