force-app/main/default/objects/Communication__c/fields/Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Status__c</fullName>
    <label>Call Attempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Visit confirmed</fullName>
            </value>
            <value>
                <fullName>Visit proposed</fullName>
            </value>
            <value>
                <fullName>Meeting done</fullName>
            </value>
            <value>
                <fullName>Visit done</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Tele Meeting Done</fullName>
            </value>
            <value>
                <fullName>Tele Meeting Fixed</fullName>
            </value>
            <value>
                <fullName>TMD + MD</fullName>
            </value>
            <value>
                <fullName>Meeting Fixed</fullName>
            </value>
            <value>
                <fullName>Meeting Proposed</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Booking Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>