force-app/main/default/objects/Communication__c/fields/Call_Back__c.field-meta.xml
<CustomField>
    <fullName>Call_Back__c</fullName>
    <label>Call Back</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>