force-app/main/default/objects/Communication__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call complete</fullName>
            </value>
            <value>
                <fullName>Call incomplete</fullName>
            </value>
            <value>
                <fullName>Ringing</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Invalid number</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Out of coverage</fullName>
            </value>
            <value>
                <fullName>Spoke to 3rd party</fullName>
            </value>
            <value>
                <fullName>Call back later</fullName>
            </value>
            <value>
                <fullName>Phone Switched off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>