force-app/main/default/objects/Communication__c/fields/Channel_Partner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Phone__c</fullName>
    <label>Channel Partner Phone</label>
    <type>Phone</type>
</CustomField>