force-app/main/default/objects/Communication__c/fields/Customer_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_Email__c</fullName>
    <label>Customer Preferred Email</label>
    <type>Email</type>
</CustomField>