force-app/main/default/objects/Communication__c/fields/Enquiry_Received_Project_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Received_Project_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Received Project Lookup</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Communications (Enquiry Received Project Lookup)</relationshipLabel>
    <relationshipName>Communications1</relationshipName>
    <type>Lookup</type>
</CustomField>