force-app/main/default/objects/Communication__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled By Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>