force-app/main/default/objects/Communication__c/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadName</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>