force-app/main/default/objects/Communication__c/fields/Name_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Account__c</fullName>
    <formula>OptyName__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Of Account</label>
    <type>Text</type>
</CustomField>