force-app/main/default/objects/Communication__c/fields/OptyName__c.field-meta.xml
<CustomField>
    <fullName>OptyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OptyName</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>