force-app/main/default/objects/Communication__c/fields/OptyOwner__c.field-meta.xml
<CustomField>
    <fullName>OptyOwner__c</fullName>
    <formula>OptyName__r.Owner.FirstName &amp; &quot; &quot; &amp; OptyName__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OptyOwner</label>
    <type>Text</type>
</CustomField>