force-app/main/default/objects/Communication__c/fields/Registraion_Status__c.field-meta.xml
<CustomField>
    <fullName>Registraion_Status__c</fullName>
    <label>Registraion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Pending</fullName>
            </value>
            <value>
                <fullName>WIP Details Sent to Client</fullName>
            </value>
            <value>
                <fullName>Registration Deferred-Indemnity Given</fullName>
            </value>
            <value>
                <fullName>WIP-Registration Date Fixed</fullName>
            </value>
            <value>
                <fullName>Agreement Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>