force-app/main/default/objects/Communication__c/fields/Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name__c</fullName>
    <label>Sales Manager Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>