force-app/main/default/objects/Communication__c/fields/Show_Walk_In_Source__c.field-meta.xml
<CustomField>
    <fullName>Show_Walk_In_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Walk In Source</label>
    <type>Checkbox</type>
</CustomField>