force-app/main/default/objects/Communication__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <externalId>true</externalId>
    <label>TaskId</label>
    <length>150</length>
    <type>Text</type>
</CustomField>