force-app/main/default/objects/Communication__c/fields/Visit_Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Visit_Form_Number__c</fullName>
    <label>Visit Form Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>