force-app/main/default/objects/Communication__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Cold - Follow Up</fullName>
            </value>
            <value>
                <fullName>Warm - Follow up</fullName>
            </value>
            <value>
                <fullName>Revisit Proposed</fullName>
            </value>
            <value>
                <fullName>Revisit Confirmed</fullName>
            </value>
            <value>
                <fullName>Revisit Done</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>