force-app/main/default/objects/Communication__c/fields/Visitor_s_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Visitor_s_Phone_No__c</fullName>
    <label>Visitor&apos;s Phone No</label>
    <type>Phone</type>
</CustomField>