force-app/main/default/objects/Communication__c/fields/Walk_in_Source__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Source__c</fullName>
    <label>Walk-in Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>